Sync IndexerConfig on exit

Summary:
KCoreConfigSkeleton, unlike KConfig does not automagically save on exit.

BUG: 417127

Test Plan:
balooctl disable
balooctl enable

Subscribers: kde-frameworks-devel, #baloo

Tags: #frameworks, #baloo

Differential Revision: https://phabricator.kde.org/D27376